chore: pulling some translations :)

--- a/src/i18n/messages/it_IT.json
+++ b/src/i18n/messages/it_IT.json
@@ -1,15 +1,11 @@
 {
-  "start.learning": "Inizia a imparare",
-  "with.site.name": "con {siteName}",
-  "complete.your.profile.1": "Completata",
-  "complete.your.profile.2": "Il tuo profilo",
-  "welcome.to.platform": "Benvenuto in {siteName}, {username}!",
+  "error.notfound.message": "La pagina che stai cercando non è disponibile o si è verificato un errore nell'URL. Controlla l'URL e riprova. ",
   "institution.login.page.sub.heading": "Scegli il tuo istituto dall&#39;elenco sottostante",
   "logistration.sign.in": "Accedi",
   "logistration.register": "Registrazione",
   "enterprisetpa.title.heading": "Vuoi accedere utilizzando le credenziali {providerName}?",
   "enterprisetpa.login.button.text": "Mostrami altre modalità di accesso o registrazione",
-  "enterprisetpa.login.button.text.public.account.creation.disabled": "Show me other ways to sign in",
+  "enterprisetpa.login.button.text.public.account.creation.disabled": "Mostrami altri modi per accedere",
   "sso.sign.in.with": "Accedi con {providerName}",
   "sso.create.account.using": "Crea un account utilizzando {providerName}",
   "show.password": "Mostra password",
@@ -22,10 +18,9 @@
   "login.third.party.auth.account.not.linked": "Hai correttamente effettuato l'accesso in {currentProvider}, ma il tuo account {currentProvider} non ha un account {platformName} ad esso abbinato. Per collegare i tuoi account accesi utilizzando la password {platformName}. ",
   "register.third.party.auth.account.not.linked": "Hai eseguito correttamente l&#39;accesso a {a03f0f8cfb85cz0}! Abbiamo solo bisogno di un po&#39; più di informazioni prima di iniziare a imparare con {platformName}.",
   "registration.using.tpa.form.heading": "Completa la creazione del tuo account",
-  "zendesk.supportTitle": "edX Support",
-  "zendesk.selectTicketForm": "Please choose your request type:",
-  "error.notfound.message": "La pagina che stai cercando non è disponibile o si è verificato un errore nell'URL. Controlla l'URL e riprova. ",
-  "forgot.password.confirmation.message": "Abbiamo inviato un&#39;email a {email} con le istruzioni per reimpostare la password. Se non ricevi un messaggio di reimpostazione della password dopo 1 minuto, verifica di aver inserito l&#39;indirizzo e-mail corretto o controlla la cartella spam. Se hai bisogno di ulteriore assistenza, {supportLink}.",
+  "zendesk.supportTitle": "Supporto edX",
+  "zendesk.selectTicketForm": "Scegli il tipo di richiesta:",
+  "forgot.password.confirmation.message": "Noi sent an Email to {Email} con le istruzioni to resettiamo il tuo Password . Se non ricevi un Password reset message dopo 1 minuto, verify che hai inserito l&#39;indirizzo correct Email o controlla la cartella spam. Se hai bisogno di ulteriore assistenza, {supportLink} .",
   "forgot.password.page.title": "Dimenticato la password | {siteName}",
   "forgot.password.page.heading": "Resetta la password",
   "forgot.password.page.instructions": "Inserisci il tuo indirizzo e-mail qui sotto e ti invieremo un&#39;e-mail con le istruzioni su come reimpostare la tua password.",
@@ -40,7 +35,7 @@
   "confirmation.message.title": "Controlla la tua casella di posta",
   "confirmation.support.link": "contatta il supporto tecnico",
   "need.help.sign.in.text": "Hai bisogno di aiuto per l'accesso? ",
-  "additional.help.text": "Per ulteriore assistenza, contattare l&#39;assistenza {platformName} all&#39;indirizzo",
+  "additional.help.text": "Per ulteriore assistenza, contattare il supporto {platformName} all&#39;indirizzo",
   "sign.in.text": "Accedi",
   "extend.field.errors": "{emailError} di seguito.",
   "invalid.token.heading": "Link di ripristino della password non valido",
@@ -51,9 +46,9 @@
   "token.validation.internal.sever.error": "Si è verificato un errore. Prova ad aggiornare la pagina oppure verifica la connessione internet.",
   "internal.server.error": "Si è verificato un errore. Prova ad aggiornare la pagina oppure verifica la connessione internet.",
   "account.activation.error.message": "Si è verificato un errore, seleziona {supportLink} per risolvere il problema. ",
-  "login.inactive.user.error": "Per accedere, devi attivare il tuo account.{lineBreak} {lineBreak}Abbiamo appena inviato un link di attivazione a {email}. Se non ricevi un'email, controlla la cartella della posta indesiderata oppure seleziona {supportLink}.",
-  "allowed.domain.login.error": "As {allowedDomain} user, You must login with your {allowedDomain} {tpaLink}.",
-  "login.incorrect.credentials.error.attempts.text.1": "Il nome utente, l&#39;e-mail o la password che hai inserito non sono corretti. Hai {remainingAttempts} più tentativi di accesso prima che il tuo account venga temporaneamente bloccato.",
+  "login.inactive.user.error": "in Order to segno in , è necessario to Attiva il tuo account . {lineBreak} {lineBreak} Abbiamo solo sent un&#39;attivazione link to {Email} . Se non ricevi Email , controlla la cartella spam o {supportLink} .",
+  "allowed.domain.login.error": "Come utente {allowedDomain}, devi accedere con il tuo {allowedDomain} {tpaLink}.",
+  "login.incorrect.credentials.error.attempts.text.1": "Il username , Email o Password inserito non è corretto. Hai {remainingAttempts} più segno in tentativi prima che account venga temporaneamente bloccato.",
   "login.incorrect.credentials.error.attempts.text.2": "Se hai dimenticato la password, {resetLink}",
   "account.locked.out.message.2": "Per sicurezza, puoi {resetLink} prima di riprovare.",
   "login.incorrect.credentials.error.with.reset.link": "Il nome utente, l&#39;e-mail o la password inseriti non sono corretti. Riprova o {resetLink}.",
@@ -96,20 +91,31 @@
   "password.security.block.body": "Il nostro sistema ha rilevato che la tua password è vulnerabile. Cambia la tua password in modo che il tuo account rimanga sicuro.",
   "password.security.close.button": "Chiudi",
   "password.security.redirect.to.reset.password.button": "Ripristina la tua password",
-  "progressive.profiling.page.title": "Welcome | {siteName}",
+  "login.tpa.authentication.failure": "Siamo spiacenti, non sei autorizzato ad accedere a {platform_name} tramite questo canale. Contatta il tuo amministratore o responsabile dell&#39;apprendimento per accedere a {platform_name}.{lineBreak}{lineBreak}Dettagli errore:{lineBreak}{errorMessage}",
+  "progressive.profiling.page.title": "Benvenuto | {siteName}",
   "progressive.profiling.page.heading": "Alcune domande per te ci aiuteranno a diventare più intelligenti.",
   "optional.fields.information.link": "Ulteriori informazioni su come utilizziamo queste informazioni.",
   "optional.fields.submit.button": "Invia",
   "optional.fields.skip.button": "Salta per ora",
-  "optional.fields.next.button": "Next",
+  "optional.fields.next.button": "Successivo",
   "continue.to.platform": "Continua con {platformName}",
   "modal.title": "Grazie per averci fatto sapere.",
   "modal.description": "Puoi completare il tuo profilo nelle impostazioni in qualsiasi momento se cambi idea.",
   "welcome.page.error.heading": "Impossibile aggiornare il tuo profilo",
   "welcome.page.error.message": "Si è verificato un errore. Puoi completare il tuo profilo nelle impostazioni in qualsiasi momento.",
-  "recommendation.page.title": "Recommendations | {siteName}",
-  "recommendation.page.heading": "We have a few recommendations to get you started.",
-  "recommendation.skip.button": "Skip for now",
+  "recommendation.page.title": "Raccomandazioni | {siteName}",
+  "recommendation.page.heading": "Abbiamo alcuni consigli per iniziare.",
+  "recommendation.skip.button": "Salta per ora",
+  "recommendation.option.trending": "In voga",
+  "recommendation.option.popular": "Più popolare",
+  "recommendation.option.recommended.for.you": "Raccomandato per te",
+  "recommendation.product-card.pill-text.course": "Corso",
+  "recommendation.product-card.pill-text.professional-certificate": "Certificato professionale ",
+  "recommendation.product-card.pill-text.emeritus": "Offerto su Emerito",
+  "recommendation.product-card.pill-text.shorelight": "Offerto tramite Shorelight",
+  "recommendation.product-card.footer-text.number-of-courses": "{lunghezza} <span class='notranslate'>{label}</span>",
+  "recommendation.product-card.footer-text.subscription": "Sottoscrizione",
+  "recommendation.product-card.launch-icon.sr-text": "Apre un collegamento in una nuova scheda",
   "register.page.title": "Registrazione | {siteName}",
   "registration.fullname.label": "Nome e Cognome",
   "registration.email.label": "Email",
@@ -123,6 +129,7 @@
   "help.text.email": "Per l&#39;attivazione dell&#39;account e aggiornamenti importanti",
   "create.account.for.free.button": "Crea un account gratis",
   "registration.other.options.heading": "Oppure registrati con:",
+  "create.account.cta.button": "<span class='notranslate'>{label}</span>",
   "register.institution.login.button": "Credenziali dell&#39;istituto/campus",
   "register.institution.login.page.title": "Registrati con le credenziali dell'istituzione/campus",
   "empty.name.field.error": "Inserisci il tuo nome e cognome",
@@ -130,6 +137,7 @@
   "empty.username.field.error": "Il nome utente deve essere compreso tra 2 e 30 caratteri",
   "empty.password.field.error": "I criteri della password non sono stati soddisfatti",
   "empty.country.field.error": "Seleziona il tuo paese o regione di residenza",
+  "invalid.country.field.error": "Il Paese deve corrispondere a un&#39;opzione disponibile nel menu a discesa.",
   "email.do.not.match": "Gli indirizzi email non corrispondono.",
   "email.invalid.format.error": "Inserisci un indirizzo email valido",
   "username.validation.message": "Il nome utente deve essere compreso tra 2 e 30 caratteri",
@@ -140,15 +148,13 @@
   "registration.request.server.error": "Si è verificato un errore. Prova ad aggiornare la pagina oppure verifica la connessione internet.",
   "registration.rate.limit.error": "Troppi tentativi di registrazione non riusciti. Prova di nuovo più tardi.",
   "registration.tpa.session.expired": "La registrazione mediante {provider} è andata in timeout.",
+  "registration.tpa.authentication.failure": "Siamo spiacenti, non sei autorizzato ad accedere a {platform_name} tramite questo canale. Contatta il tuo amministratore o responsabile dell&#39;apprendimento per accedere a {platform_name}.{lineBreak}{lineBreak}Dettagli errore:{lineBreak}{errorMessage}",
   "terms.of.service.and.honor.code": "Termini e Condizioni del Servizio",
   "privacy.policy": "Informativa sulla privacy",
   "honor.code": "Codice d'Onore",
   "terms.of.service": "Termini di Servizio",
   "registration.username.suggestion.label": "Suggerito:",
   "did.you.mean.alert.text": "Intendevi",
-  "register.page.terms.of.service.and.honor.code": "Creando un account, accetti il {tosAndHonorCode} e riconosci che {platformName} e ciascun Membro trattano i tuoi dati personali in conformità con l' {privacyPolicy}.",
-  "register.page.honor.code": "Accetto {platformName} {tosAndHonorCode}",
-  "register.page.terms.of.service": "Accetto {platformName} {termsOfService}",
   "sign.in": "Accedi",
   "reset.password.page.title": "Ripristina password | {siteName}",
   "reset.password": "Resetta la password",
@@ -162,5 +168,15 @@
   "reset.server.rate.limit.error": "Troppe richieste.",
   "reset.password.success.heading": "Ripristino della password completato.",
   "reset.password.success": "La tua password è stata resettata. Accedi al tuo account.",
-  "rate.limit.error": "Si è verificato un errore dovuto alle troppe richieste. Prova di nuovo più tardi."
+  "rate.limit.error": "Si è verificato un errore dovuto alle troppe richieste. Prova di nuovo più tardi.",
+  "start.learning": "Inizia a imparare",
+  "with.site.name": "con {siteName}",
+  "your.career.turning.point": "La svolta della tua carriera",
+  "is.here": "è qui.",
+  "welcome.to.platform": "Benvenuto in {siteName}, {username}!",
+  "complete.your.profile.1": "Completata",
+  "complete.your.profile.2": "Il tuo profilo",
+  "register.page.terms.of.service.and.honor.code": "by creando un account , accetti to {tosAndHonorCode} e riconosci che {platformName} e ogni Member elaborano il tuo data personale in in conformità con {privacyPolicy} .",
+  "register.page.honor.code": "Sono d&#39;accordo to the {platformName} {tosAndHonorCode}",
+  "register.page.terms.of.service": "Sono d&#39;accordo to the {platformName} {termsOfService}"
 }
