--- a/src/i18n/messages/es_419.json
+++ b/src/i18n/messages/es_419.json
@@ -1,15 +1,11 @@
 {
-  "start.learning": "Empieza a aprender",
-  "with.site.name": "con {siteName}",
-  "complete.your.profile.1": "Completado",
-  "complete.your.profile.2": "tu perfil ",
-  "welcome.to.platform": "¡Bienvenido a {siteName}, {username}!",
+  "error.notfound.message": "La página que estas buscando no está disponible o hay un error en la URL. Por favor, verifica la URL y vuelve a intentarlo.",
   "institution.login.page.sub.heading": "Selecciona tu institución de la lista siguiente",
   "logistration.sign.in": "Iniciar sesión",
   "logistration.register": "Registrarse",
   "enterprisetpa.title.heading": "¿Deseas iniciar sesión con tus credenciales de {providerName}?",
   "enterprisetpa.login.button.text": "Mostrar otras formas de iniciar sesión o de registrarme",
-  "enterprisetpa.login.button.text.public.account.creation.disabled": "Show me other ways to sign in",
+  "enterprisetpa.login.button.text.public.account.creation.disabled": "Mostrar otras formas de iniciar sesión",
   "sso.sign.in.with": "Inicio de sesión con {providerName}",
   "sso.create.account.using": "Crear una cuenta con {providerName}",
   "show.password": "Mostrar contraseña",
@@ -22,10 +18,9 @@
   "login.third.party.auth.account.not.linked": "Te has registrado correctamente en {currentProvider}, pero tu cuenta de {currentProvider} no tiene una cuenta de {platformName} asociada. Para asociar tus cuentas, inicia sesión ahora usando tu contraseña de {platformName}.",
   "register.third.party.auth.account.not.linked": "¡Has iniciado sesión con éxito en {currentProvider}! Sólo necesitamos un poco más de información antes de que empieces a aprender con {platformName}.",
   "registration.using.tpa.form.heading": "Termina de crear tu cuenta",
-  "zendesk.supportTitle": "edX Support",
-  "zendesk.selectTicketForm": "Please choose your request type:",
-  "error.notfound.message": "La página que estas buscando no está disponible o hay un error en la URL. Por favor, verifica la URL y vuelve a intentarlo.",
-  "forgot.password.confirmation.message": "Hemos enviado un correo electrónico a {email} con instrucciones para restablecer tu contraseña.\n          Si no recibes un mensaje de restablecimiento de contraseña después de 1 minuto, verifica que has introducido\n          la dirección de correo electrónico correcta, o comprueba tu carpeta de correo no deseado. Si necesitas más ayuda, {supportLink}.",
+  "zendesk.supportTitle": "Soporte edX",
+  "zendesk.selectTicketForm": "Elegir el tipo de solicitud:",
+  "forgot.password.confirmation.message": "Enviamos un correo electrónico a {email} con instrucciones para restablecer su contraseña. Si no recibe un mensaje de restablecimiento de contraseña después de 1 minuto, verifique que ingresó la dirección de correo electrónico correcta o verifique su carpeta de correo no deseado. Si necesita más ayuda, {supportLink}.",
   "forgot.password.page.title": "Olvidé la contraseña | {siteName}",
   "forgot.password.page.heading": "Restablecer mi contraseña",
   "forgot.password.page.instructions": "Por favor, introduce tu dirección de correo electrónico y te enviaremos un correo electrónico con instrucciones sobre cómo restablecer tu contraseña.",
@@ -40,7 +35,7 @@
   "confirmation.message.title": "Verifica tu correo electrónico",
   "confirmation.support.link": "entra en contacto con el equipo de soporte técnico",
   "need.help.sign.in.text": "¿Necesitas ayuda para iniciar sesión?",
-  "additional.help.text": "Para obtener ayuda adicional, comuníquese con el soporte de {platformName} en",
+  "additional.help.text": "Para obtener ayuda adicional, comuníquese con el soporte {platformName} en",
   "sign.in.text": "Iniciar sesión",
   "extend.field.errors": "{emailError} a continuación.",
   "invalid.token.heading": "Enlace de restablecimiento de contraseña inválido",
@@ -51,9 +46,9 @@
   "token.validation.internal.sever.error": "Se ha producido un error. Intenta actualizar la página o verifica tu conexión a Internet.",
   "internal.server.error": "Se ha producido un error. Intenta actualizar la página o verifica tu conexión a Internet.",
   "account.activation.error.message": "Algo no funcionó correctamente, por favor {supportLink} para resolver este problema.",
-  "login.inactive.user.error": "Para iniciar sesión, debes activar tu cuenta..{lineBreak}\n            {lineBreak} Acabamos de enviar un enlace de activación a {email}. Si no recibes un correo electrónico,\n            revisa tus carpetas de spam o {supportLink}.",
+  "login.inactive.user.error": "Para iniciar sesión, debe activar su cuenta.{lineBreak} {lineBreak}Acabamos de enviar un enlace de activación a {email}. Si no recibe un correo electrónico, revise sus carpetas de spam o {supportLink}.",
   "allowed.domain.login.error": "Como usuario {allowedDomain}, debe iniciar sesión con su {allowedDomain} {tpaLink}.",
-  "login.incorrect.credentials.error.attempts.text.1": "El nombre de usuario, el email o la contraseña que has introducido son incorrectos. Tienes {remainingAttempts} intentos más de inicio de sesión\n                antes de que tu cuenta se bloquee temporalmente.",
+  "login.incorrect.credentials.error.attempts.text.1": "El nombre de usuario, correo electrónico o contraseña que ingresó es incorrecto. Tiene {remainingAttempts} más intentos de inicio de sesión antes de que su cuenta se bloquee temporalmente.",
   "login.incorrect.credentials.error.attempts.text.2": "Si has olvidado tu contraseña, {resetLink}",
   "account.locked.out.message.2": "Para estar seguro, puedes {resetLink} antes de volver a intentarlo.",
   "login.incorrect.credentials.error.with.reset.link": "El nombre de usuario, el correo electrónico o la contraseña que has introducido son incorrectos. Por favor, inténtalo de nuevo o {resetLink}.",
@@ -96,7 +91,8 @@
   "password.security.block.body": "Nuestro sistema detectó que su contraseña es vulnerable. Cambie su contraseña para que su cuenta permanezca segura.",
   "password.security.close.button": "Cerrar",
   "password.security.redirect.to.reset.password.button": "Restablece tu contraseña",
-  "progressive.profiling.page.title": "Welcome | {siteName}",
+  "login.tpa.authentication.failure": "Lo sentimos, no está autorizado para acceder a {platform_name} a través de este canal. Comuníquese con su administrador o gerente de aprendizaje para acceder a {platform_name}.{lineBreak}{lineBreak}Detalles del error:{lineBreak}{errorMessage}",
+  "progressive.profiling.page.title": "Bienvenido | {siteName}",
   "progressive.profiling.page.heading": "Unas cuantas preguntas para ti nos ayudarán a mejorar.",
   "optional.fields.information.link": "Aprende más sobre cómo usamos esta información.",
   "optional.fields.submit.button": "Enviar",
@@ -110,6 +106,16 @@
   "recommendation.page.title": "Recomendaciones | {siteName}",
   "recommendation.page.heading": "Tenemos algunas recomendaciones para empezar.",
   "recommendation.skip.button": "Saltar por ahora ",
+  "recommendation.option.trending": "Tendencias",
+  "recommendation.option.popular": "Más popular",
+  "recommendation.option.recommended.for.you": "Recomendado para usted",
+  "recommendation.product-card.pill-text.course": "Curso",
+  "recommendation.product-card.pill-text.professional-certificate": "Certificado profesional",
+  "recommendation.product-card.pill-text.emeritus": "Ofrecido en Emeritus",
+  "recommendation.product-card.pill-text.shorelight": "Ofrecido a través de Shorelight",
+  "recommendation.product-card.footer-text.number-of-courses": "{length} {label}",
+  "recommendation.product-card.footer-text.subscription": "Suscripción",
+  "recommendation.product-card.launch-icon.sr-text": "Abrir un enlace en una pestaña nueva",
   "register.page.title": "Register | {siteName}",
   "registration.fullname.label": "Nombre completo",
   "registration.email.label": "Correo electrónico",
@@ -123,6 +129,7 @@
   "help.text.email": "Para la activación de la cuenta y las actualizaciones importantes",
   "create.account.for.free.button": "Crea una cuenta gratis",
   "registration.other.options.heading": "O regístrese con:",
+  "create.account.cta.button": "{label}",
   "register.institution.login.button": "Credenciales de la institución/campus",
   "register.institution.login.page.title": "Registro con credenciales de la institución/campus",
   "empty.name.field.error": "Introduce tu nombre completo",
@@ -130,6 +137,7 @@
   "empty.username.field.error": "El nombre de usuario debe tener entre 2 y 30 caracteres",
   "empty.password.field.error": "No se han cumplido los criterios de la contraseña",
   "empty.country.field.error": "Selecciona tu país o región de residencia",
+  "invalid.country.field.error": "El país debe coincidir con una opción disponible en el desplegable .",
   "email.do.not.match": "Los correos electrónicos no son iguales.",
   "email.invalid.format.error": "Introduce una dirección de correo electrónico válida",
   "username.validation.message": "El nombre de usuario debe tener entre 2 y 30 caracteres",
@@ -140,15 +148,13 @@
   "registration.request.server.error": "Se ha producido un error. Intenta actualizar la página o comprueba tu conexión a Internet.",
   "registration.rate.limit.error": "Demasiados intentos de registro fallidos. Vuelve a intentarlo más tarde.",
   "registration.tpa.session.expired": "Inscripción usando {provider} ha expirado.",
+  "registration.tpa.authentication.failure": "Lo sentimos, no está autorizado para acceder a {platform_name} a través de este canal. Comuníquese con su administrador o gerente de aprendizaje para acceder a {platform_name}.{lineBreak}{lineBreak}Detalles del error:{lineBreak}{errorMessage}",
   "terms.of.service.and.honor.code": "Condiciones de servicio y código de honor",
   "privacy.policy": "Política de privacidad ",
   "honor.code": "Código de Honor",
   "terms.of.service": "Términos de servicio",
   "registration.username.suggestion.label": "Se recomienda:",
   "did.you.mean.alert.text": "¿Quieres decir",
-  "register.page.terms.of.service.and.honor.code": "Al crear una cuenta, aceptas el {tosAndHonorCode} y reconoces que {platformName} y cada\n                Miembro procesa tus datos personales de acuerdo con la {privacyPolicy}.",
-  "register.page.honor.code": "Acepto las {platformName} {tosAndHonorCode}",
-  "register.page.terms.of.service": "Acepto las {platformName} {termsOfService}",
   "sign.in": "Iniciar sesión",
   "reset.password.page.title": "Restablecer contraseña | {siteName}",
   "reset.password": "Restablecer mi contraseña",
@@ -162,5 +168,15 @@
   "reset.server.rate.limit.error": "Demasiadas solicitudes.",
   "reset.password.success.heading": "Restablecimiento de la contraseña completado.",
   "reset.password.success": "Tu contraseña ha sido restablecida. Acceda a tu cuenta.",
-  "rate.limit.error": "Se ha producido un error debido a demasiadas solicitudes. Por favor, inténtalo de nuevo después de algún tiempo."
+  "rate.limit.error": "Se ha producido un error debido a demasiadas solicitudes. Por favor, inténtalo de nuevo después de algún tiempo.",
+  "start.learning": "Empieza a aprender",
+  "with.site.name": "con {siteName}",
+  "your.career.turning.point": "El punto de inflexión de tu carrera",
+  "is.here": "es aquí.",
+  "welcome.to.platform": "¡Bienvenido a {siteName}, {username}!",
+  "complete.your.profile.1": "Completado",
+  "complete.your.profile.2": "tu perfil ",
+  "register.page.terms.of.service.and.honor.code": "Al crear una cuenta, acepta {tosAndHonorCode} y reconoce que {platformName} y cada miembro procesan sus datos personales de acuerdo con {privacyPolicy}.",
+  "register.page.honor.code": "Acepto las {platformName} {tosAndHonorCode}",
+  "register.page.terms.of.service": "Acepto las {platformName} {termsOfService}"
 }
