--- a/src/i18n/messages/pt_PT.json
+++ b/src/i18n/messages/pt_PT.json
@@ -1,11 +1,5 @@
 {
-  "start.learning": "Começar a aprender",
-  "with.site.name": "com {siteName}",
-  "your.career.turning.point": "Your career turning point",
-  "is.here": "is here.",
-  "welcome.to.platform": "Bem vindo a {siteName}, {username}!",
-  "complete.your.profile.1": "Concluído",
-  "complete.your.profile.2": "o seu perfil",
+  "error.notfound.message": "A página que procura não está disponível ou há um erro no URL. Por favor, verifique o URL e tente novamente.",
   "institution.login.page.sub.heading": "Escolha a sua instituição a partir da lista abaixo",
   "logistration.sign.in": "Iniciar sessão",
   "logistration.register": "Registe-se",
@@ -26,8 +20,7 @@
   "registration.using.tpa.form.heading": "Acabe de criar a sua conta",
   "zendesk.supportTitle": "Apoio edX",
   "zendesk.selectTicketForm": "Por favor, escolha o seu tipo de pedido:",
-  "error.notfound.message": "A página que procura não está disponível ou há um erro no URL. Por favor, verifique o URL e tente novamente.",
-  "forgot.password.confirmation.message": "Enviámos um email para {email} com instruções para redefinir a sua palavra-passe.\n          Se não receber uma mensagem de redefinição de palavra-passe após 1 minuto, verifique se introduziu\n          o endereço de correio electrónico correto, ou verifique a sua pasta de spam. Se precisar de mais assistência, {supportLink}.",
+  "forgot.password.confirmation.message": "",
   "forgot.password.page.title": "Esqueceu a Senha | {siteName}",
   "forgot.password.page.heading": "Redefinir palavra-passe",
   "forgot.password.page.instructions": "Por favor introduza o seu endereço de email abaixo e enviar-lhe-emos um email com instruções sobre como redefinir a sua palavra-passe.",
@@ -42,7 +35,7 @@
   "confirmation.message.title": "Verifique o seu email",
   "confirmation.support.link": "contacto o suporte técnico",
   "need.help.sign.in.text": "Precisa de ajuda para entrar?",
-  "additional.help.text": "Para ajuda adicional, contacte o apoio {platformName} em",
+  "additional.help.text": "",
   "sign.in.text": "Iniciar sessão",
   "extend.field.errors": "{emailError} abaixo.",
   "invalid.token.heading": "Link para Redefinir Palavra-passe inválido",
@@ -53,9 +46,9 @@
   "token.validation.internal.sever.error": "Ocorreu um erro. Tente actualizar a página, ou verifique a sua ligação à Internet.",
   "internal.server.error": "Ocorreu um erro. Tente actualizar a página, ou verifique a sua ligação à Internet.",
   "account.activation.error.message": "Alguma coisa correu mal, siga {supportLink} para resolver esta questão.",
-  "login.inactive.user.error": "Para iniciar sessão, precisa ativar a sua conta. {lineBreak}\n            {lineBreak} Acabámos de enviar um link de ativação para {email}. Se não receber um e-mail,\n            verifique as suas pastas de spam ou {supportLink}.",
+  "login.inactive.user.error": "",
   "allowed.domain.login.error": "Como utilizador do {allowedDomain}, deve iniciar sessão com o seu {allowedDomain} {tpaLink}.",
-  "login.incorrect.credentials.error.attempts.text.1": "O nome de utilizador, email ou palavra-passe que introduziu está incorreto. Tem {remainingAttempts} mais tentativas\n                de login antes da sua conta ser temporariamente bloqueada.",
+  "login.incorrect.credentials.error.attempts.text.1": "",
   "login.incorrect.credentials.error.attempts.text.2": "Se esqueceu a sua palavra-passe, {resetLink}",
   "account.locked.out.message.2": "Por precaução, pode {resetLink} antes de tentar novamente.",
   "login.incorrect.credentials.error.with.reset.link": "O nome de utilizador, email ou senha que introduziu está incorreto. Por favor, tente novamente ou {resetLink}.",
@@ -71,7 +64,7 @@
   "non.compliant.password.message": "A sua palavra-passe atual não satisfaz os novos requisitos de segurança. Acabámos de enviar uma mensagem de redefinição da palavra-passe para o endereço de email associado a esta conta. Obrigado por nos ajudar a manter os seus dados em segurança.",
   "account.locked.out.message.1": "Para proteger sua conta, esta foi temporariamente bloqueada. Tente novamente dentro de 30 minutos.",
   "enterprise.login.btn.text": "Credenciais da empresa ou escola",
-  "username.or.email.format.validation.less.chars.message": "O nome de utilizador ou email deve ter pelo menos 2 carateres.",
+  "username.or.email.format.validation.less.chars.message": "O nome de utilizador ou email deve ter pelo menos 3 carateres.",
   "email.validation.message": "Insira o seu nome de utilizador ou email",
   "password.validation.message": "Os critérios de palavra-passe não foram cumpridos",
   "account.activation.success.message.title": "Sucesso! Você ativou a sua conta.",
@@ -113,15 +106,16 @@
   "recommendation.page.title": "Recomendações | {siteName}",
   "recommendation.page.heading": "Temos algumas recomendações para o ajudar a começar.",
   "recommendation.skip.button": "Saltar por enquanto",
-  "recommendation.option.trending": "Trending",
-  "recommendation.option.popular": "Most Popular",
-  "recommendation.product-card.pill-text.course": "Course",
-  "recommendation.product-card.pill-text.professional-certificate": "Professional Certificate",
-  "recommendation.product-card.pill-text.emeritus": "Offered on Emeritus",
-  "recommendation.product-card.pill-text.shorelight": "Offered through Shorelight",
-  "recommendation.product-card.footer-text.number-of-courses": "{length} {label}",
-  "recommendation.product-card.footer-text.subscription": "Subscription",
-  "recommendation.product-card.launch-icon.sr-text": "Opens a link in a new tab",
+  "recommendation.option.trending": "",
+  "recommendation.option.popular": "",
+  "recommendation.option.recommended.for.you": "",
+  "recommendation.product-card.pill-text.course": "Curso",
+  "recommendation.product-card.pill-text.professional-certificate": "Certificado Profissional",
+  "recommendation.product-card.pill-text.emeritus": "",
+  "recommendation.product-card.pill-text.shorelight": "",
+  "recommendation.product-card.footer-text.number-of-courses": "",
+  "recommendation.product-card.footer-text.subscription": "",
+  "recommendation.product-card.launch-icon.sr-text": "",
   "register.page.title": "Registar | {siteName}",
   "registration.fullname.label": "Nome completo",
   "registration.email.label": "E-mail",
@@ -135,7 +129,7 @@
   "help.text.email": "Para ativação de contas e atualizações importantes",
   "create.account.for.free.button": "Criar uma conta gratuitamente",
   "registration.other.options.heading": "Ou registe-se com:",
-  "create.account.cta.button": "{label}",
+  "create.account.cta.button": "",
   "register.institution.login.button": "Credenciais da instituição/campus",
   "register.institution.login.page.title": "Registo com credenciais da instituição/campus",
   "empty.name.field.error": "Insira o seu nome completo",
@@ -143,6 +137,7 @@
   "empty.username.field.error": "O nome de utilizador deve ter entre 2 e 30 carateres",
   "empty.password.field.error": "Os critérios de palavra-passe não foram cumpridos",
   "empty.country.field.error": "Selecione o seu país ou região de residência",
+  "invalid.country.field.error": "",
   "email.do.not.match": "Os endereços de email não correspondem.",
   "email.invalid.format.error": "Introduzir um endereço de correio electrónico válido",
   "username.validation.message": "O nome de utilizador deve ter entre 2 e 30 carateres",
@@ -160,9 +155,6 @@
   "terms.of.service": "Termos do Serviço",
   "registration.username.suggestion.label": "Sugerido:",
   "did.you.mean.alert.text": "Quis dizer",
-  "register.page.terms.of.service.and.honor.code": "Ao criar uma conta, concorda com o {tosAndHonorCode} e reconhece que {platformName} e cada\n                Membro processa os seus dados pessoais em conformidade com a {privacyPolicy}.",
-  "register.page.honor.code": "Concordo com a {tosAndHonorCode} {platformName}",
-  "register.page.terms.of.service": "Concordo com os {termsOfService} {platformName}",
   "sign.in": "Iniciar sessão",
   "reset.password.page.title": "Redefinir Palavra-passe | {siteName}",
   "reset.password": "Redefinir palavra-passe",
@@ -176,5 +168,15 @@
   "reset.server.rate.limit.error": "Demasiados pedidos.",
   "reset.password.success.heading": "Redefinição de palavra-passe concluída",
   "reset.password.success": "A sua palavra-passe foi redefinida. Inicie sessão na sua conta.",
-  "rate.limit.error": "Ocorreu um erro devido a demasiados pedidos. Por favor, tente novamente após algum tempo."
+  "rate.limit.error": "Ocorreu um erro devido a demasiados pedidos. Por favor, tente novamente após algum tempo.",
+  "start.learning": "Começar a aprender",
+  "with.site.name": "com {siteName}",
+  "your.career.turning.point": "",
+  "is.here": "",
+  "welcome.to.platform": "Bem vindo a {siteName}, {username}!",
+  "complete.your.profile.1": "Concluído",
+  "complete.your.profile.2": "o seu perfil",
+  "register.page.terms.of.service.and.honor.code": "",
+  "register.page.honor.code": "",
+  "register.page.terms.of.service": ""
 }
